# physical-ai-toolchain

./: .cspell.json  .env.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  codecov.yml  osv-scanner.toml  package-lock.json  package.json  pyproject.toml  setup-dev.ps1  setup-dev.sh
data-management/viewer/: README.md  package.json  pyproject.toml  start.sh
data-management/viewer/backend/: .env.example  Dockerfile  pyproject.toml
data-management/viewer/backend/src/api/: config.py  main.py  validation.py
data-management/viewer/backend/tests/: conftest.py  test_ai_analysis_router.py  test_annotation_service.py  test_anomaly_detection.py  test_auth_unit.py  test_clustering.py  test_config.py  test_config_branches.py  test_csrf.py  test_dataset_service.py  test_dataset_service_base.py  test_dataset_service_orchestrator.py  test_datasets_router.py  test_detection.py  test_detection_service.py  test_export_router.py  test_handler_fallback.py  test_hdf5_handler.py  test_hdf5_loader.py  test_health.py  test_joint_config_router.py  test_lerobot_handler.py  test_lerobot_loader.py  test_middleware_branches.py  test_property_based.py  test_security_middleware.py  test_validation_branches.py
data-management/viewer/backend/tests/api/: test_analysis.py  test_annotations.py  test_auth.py  test_datasets.py  test_image_transform.py  test_labels.py  test_vlm_judge_router.py  test_vlm_judge_service.py
data-management/viewer/backend/tests/services/: test_video_transcode.py
data-management/viewer/backend/tests/storage/: test_azure.py  test_base.py  test_blob_dataset.py  test_huggingface.py  test_local.py  test_paths.py
data-management/viewer/frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
data-management/viewer/frontend/src/: App.tsx  index.css
data-management/viewer/frontend/src/hooks/: index.ts  use-export.ts  use-labels.ts  use-object-detection.ts  use-vlm-judge-batch.ts  use-vlm-judge.ts
data-management/viewer/frontend/src/lib/: api-client.ts
data-management/viewer/frontend/src/stores/: annotation-store.ts
data-pipeline/: README.md  pyproject.toml
data-pipeline/capture/camera_streamer/: .dockerignore  Dockerfile  README.md  build_and_push.sh  docker-compose.yml  requirements.txt  run_streamer.sh  setup.py
data-pipeline/capture/camera_streamer/camera_streamer/: __init__.py  __main__.py  cameras.py  config.py  server.py
data-pipeline/capture/camera_streamer/config/: app.yaml
data-pipeline/capture/camera_streamer/docker/: .gitignore  stage-orbbec.sh
data-pipeline/capture/camera_streamer/tests/: conftest.py  test_cameras.py  test_config.py
data-pipeline/capture/config/: README.md
data-pipeline/capture/upload/blob_sync/: .dockerignore  .gitignore  Dockerfile  README.md  build-and-deploy.sh  config.example.yaml  requirements.txt  run.sh
data-pipeline/capture/ur/dual_recorder/: README.md  requirements.txt  run_dual_recorder.sh  setup.py
data-pipeline/capture/ur/episode_recorder/: .gitignore  README.md  install_dependencies.sh  keep_nova_session_alive.py  requirements.txt  run_episode_recorder.sh  setup.py
data-pipeline/capture/ur/leader_follower/: README.md  destination_writer.py  gui_node.py  gui_settings.json  install_dependencies.sh  lerobot_recorder_node.py  local_retention.py  recorder_node.py  requirements.txt  ros_bag_recorder.py  run_recorder.sh  source_reader.py  video_to_camera.py
data-pipeline/capture/ur/urcap/: .gitignore  README.md  build.sh  pom.xml
data-pipeline/setup/: README.md  create-arc-onboarding-principal.sh  defaults.conf  deploy-acsa.sh
data-pipeline/setup/edge/: 01-preflight.sh  02-configure-vpn.sh  03-connect-arc-server.sh  03-install-k3s.sh  04-connect-arc.sh  05-connect-arc-kubernetes.sh
evaluation/: README.md  pyproject.toml
evaluation/hil/: README.md  no_command_runner.py
evaluation/hil/config/: ur10e-no-command.json  ur10e-observations.jsonl
evaluation/hil/scripts/: run-cpu-smoke.sh  run-hil-evaluation.sh
evaluation/hil/workflows/osmo/: cpu-smoke.yaml  hil-evaluation.yaml
evaluation/metrics/: analyze_action_smoothness.py  detect_initial_objects.py  upload_artifacts.py
evaluation/sil/: eval_gr00t_dual_arm.py  eval_openpi_ur5e_dual_arm.py  evaluation.sh  infer.sh  play_policy.py  policy_evaluation.py
evaluation/sil/docker/: Dockerfile.lerobot-eval  pyproject.toml  requirements-lerobot-eval.txt
evaluation/sil/scripts/: run-local-lerobot-eval.py  run_evaluation.py  submit-azureml-isaaclab-evaluation.sh  submit-azureml-lerobot-eval.sh  submit-azureml-validation.sh  submit-osmo-eval.sh  submit-osmo-lerobot-eval.sh  test-lerobot-eval.py
evaluation/sil/workflows/azureml/: isaaclab-evaluation.yaml  lerobot-eval-entry.sh  lerobot-eval.yaml
evaluation/sil/workflows/osmo/: eval.yaml  lerobot-eval.yaml
evaluation/specifications/: hil-evaluation.specification.md
evaluation/tests/: test_upload_artifacts.py
evaluation/tests/vlm_judge/: __init__.py  test_agent.py  test_api.py  test_cache.py  test_prompts.py
evaluation/vlm_judge/: README.md  __init__.py  agent.py  api.py  backend.py  cache.py  dataset.py  frames.py  judge.py  openai_shim.py  policy_eval.py  prompts.py  pyproject.toml  run.py  service.py
evaluation/vlm_judge/scripts/: evaluate-cnc-lerobot.sh  evaluate-dataset.sh  evaluate-leisaac-pick-orange.sh  evaluate-policy-rollouts.sh  evaluate-ur10e-episodes.sh  serve-api.sh
training/il/lerobot/: pyproject.toml  requirements.txt
training/rl/: pyproject.toml  requirements.txt
training/rl/scripts/: __init__.py  launch.py  launch_rsl_rl.py  skrl_training.py  smoke_test_azure.py  submit-azureml-training.sh  submit-osmo-dataset-training.sh  submit-osmo-training.sh  train.sh
training/rl/scripts/rsl_rl/: train.py
training/rl/workflows/azureml/: train.yaml
training/rl/workflows/osmo/: train-dataset.yaml  train.yaml
training/utils/osmo-proxy/: pyproject.toml
workflows/azureml/scripts/: pyproject.toml
workflows/osmo/: README.md  osmo-metrics-spec-schema.yaml  pyproject.toml  replay-azureml.yaml  requirements-aml-mirror.txt  smoke-test-proxy-e2e.yaml
(+810 files in other folders)
