[project]
name = "physical-ai-toolchain"
version = "0.8.0"
description = "Physical AI Toolchain for Isaac Lab training"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training/rl"]

[dependency-groups]
dev = [
    "hypothesis==6.155.7",
    "numpy==2.5.0",
    "ruff==0.15.19",
    "pyarrow==24.0.0",
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "pydantic==2.13.4",
    "ipykernel==7.3.0",
    "ipywidgets==8.1.8",
    "tqdm==4.68.3",
    "matplotlib==3.11.0",
    "torch==2.12.1",
    "azureml-mlflow==1.62.0.post3",
    "azure-ai-ml==1.34.0",
]
fuzz = ["atheris>=3.1.0"]

[tool.uv]
package = false
constraint-dependencies = [
    "gitpython==3.1.50",
    "pygments==2.20.0",
]
override-dependencies = [
    # cryptography: azureml-mlflow caps cryptography<47.0.0; override to the
    # 48.0.1 release that patches GHSA-537c-gmf6-5ccf.
    "cryptography==48.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "training/tests", "data-management/tools/tests", "fleet-deployment/inference/tests"]
pythonpath = [".", "data-management/tools"]
python_files = ["test_*.py", "fuzz_harness.py"]
addopts = [
    "-ra",
    "-m",
    "not e2e",
    "--strict-markers",
    "--strict-config",
    "--junitxml=logs/pytest-results.xml",
    # Local advisory coverage for the root-discovered suites. Codecov flag uploads remain
    # authoritative for PR coverage gates; --cov-fail-under=0 keeps local runs informational.
    "--cov=training",
    "--cov=data-management/tools",
    "--cov=fleet-deployment/inference",
    "--cov=tests",
    "--cov-report=term-missing",
    "--cov-report=xml:logs/coverage-root.xml",
    "--cov-fail-under=0",
]
markers = [
    "e2e: marks tests that submit real GPU training jobs (deselect: -m 'not e2e')",
]
filterwarnings = [
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
    "ignore::marshmallow.warnings.ChangedInMarshmallow4Warning",
]

[tool.hypothesis]
max_examples = 50
deadline = 500

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"fleet-deployment/inference/act_inference_node.py" = ["E402"]
"evaluation/sil/play.py" = ["E402"]
"evaluation/sil/play_policy.py" = ["E402"]
"evaluation/sil/monitor_checkpoints.py" = ["E402"]
"training/rl/scripts/rsl_rl/*.py" = ["E402"]
"data-management/viewer/backend/tests/*.py" = ["E402"]
"data-pipeline/capture/tests/test_config_models.py" = ["E402"]
"data-pipeline/capture/tests/test_config_models_hypothesis.py" = ["E402"]
# GR00T data_config.py fragments are appended onto gr00t/experiment/data_config.py
# at runtime; So100DataConfig and DATA_CONFIG_MAP are injected by the parent module.
"training/vla/configs/groot/examples/data_config.py" = ["F821", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["training"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["training"]
branch = true
omit = [
    "training/**/conftest.py",
    "training/**/__init__.py",
    "training/tests/**",
    "tests/e2e/**",
    "tests/generate_fuzz_corpus.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.xml]
output = "logs/coverage.xml"
