[project]
name = "physical-ai-evaluation"
version = "0.1.0"
description = "Evaluation workflow runtime dependencies"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.6",
    "azure-core==1.41.0",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.3",
    "azure-ai-ml==1.32.0",
    "marshmallow==3.26.2",
    "mlflow==3.12.0",
    "packaging==25.0",
    "psutil==7.2.2",
    "pynvml==13.0.1",
    "pyperclip==1.11.0",
    "onnx==1.21.0",
    "onnxscript==0.7.0",
    "onnxruntime-gpu==1.26.0",
    "toml==0.10.2",
    "gymnasium==1.3.0",
    "torch==2.10.0",
    "tensordict==0.12.2",
    "lerobot==0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "hypothesis==6.152.6",
    "matplotlib==3.10.9",
    "numpy==2.2.6",
    "torch==2.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=sil",
    "--cov=metrics",
    "--cov-report=term-missing",
    "--cov-report=xml:logs/coverage.xml",
    "--cov-fail-under=80",
    "--junitxml=logs/pytest-results.xml",
]
markers = [
    "e2e: marks tests requiring Isaac Sim or GPU hardware (deselect: -m 'not e2e')",
]

[tool.coverage.run]
source = ["sil", "metrics"]
branch = true
omit = [
    "**/conftest.py",
    "**/__init__.py",
    "sil/monitor_checkpoints.py",
    "sil/play.py",
    "sil/play_policy.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.xml]
output = "logs/coverage.xml"
