[project]
name = "datasetanalysistool"
version = "0.1.0"
description = "Web-based dataset analysis and annotation tool for robot demonstration datasets"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.29",
    "python-dotenv==1.2.2",
    "aiofiles==25.1.0",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "Pillow==12.2.0",
    "opencv-python-headless==4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.14",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]
azure = [
    "aiohttp==3.14.0",
    "azure-storage-blob==12.29.0",
    "azure-identity==1.25.3",
]
huggingface = [
    "huggingface-hub==1.16.1",
]
hdf5 = [
    "h5py==3.16.0",
]
export = [
    "h5py==3.16.0",
    "numpy==2.4.6",
    "Pillow==12.2.0",
]
yolo = [
    "ultralytics==8.4.53",
    "numpy==2.4.6",
    "Pillow==12.2.0",
]
all = [
    "datasetanalysistool[dev,azure,huggingface,hdf5,export]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["datasetanalysistool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.uv]
constraint-dependencies = [
    "pyjwt==2.12.1",
    "pygments==2.20.0",
]
