[project]
name = "datasetanalysistool"
version = "0.1.0"
description = "Web-based dataset analysis and annotation tool for robot demonstration datasets"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.32",
    "python-dotenv==1.2.2",
    "aiofiles==25.1.0",
    "numpy==2.5.0",
    "scipy==1.18.0",
    "scikit-learn==1.9.0",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "Pillow==12.2.0",
    "opencv-python-headless==4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.19",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
]
azure = [
    "aiohttp==3.14.1",
    "azure-storage-blob==12.30.0",
    "azure-identity==1.25.3",
]
huggingface = [
    "huggingface-hub==1.20.1",
]
hdf5 = [
    "h5py==3.16.0",
]
export = [
    "h5py==3.16.0",
    "numpy==2.5.0",
    "Pillow==12.2.0",
]
yolo = [
    "ultralytics==8.4.77",
    "numpy==2.5.0",
    "Pillow==12.2.0",
]
all = [
    "datasetanalysistool[dev,azure,huggingface,hdf5,export]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["datasetanalysistool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.uv]
constraint-dependencies = [
    # cryptography: transitive via azure-identity/msal; 48.0.1 patches
    # GHSA-537c-gmf6-5ccf.
    "cryptography==48.0.1",
    "pyjwt==2.13.0",
    "pygments==2.20.0",
]
