[project]
name = "lerobot-annotation-api"
version = "0.1.0"
description = "API for LeRobot episode annotation system"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.28",
    "python-dotenv==1.2.2",
    "slowapi==0.1.9",
    "aiofiles==25.1.0",
    "numpy==2.4.4",
    "pyarrow==24.0.0",
    "Pillow==12.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.12",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "hypothesis==6.152.5",
    "schemathesis==4.18.1",
]
azure = [
    "aiohttp==3.13.5",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.3",
]
analysis = [
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "pandas==3.0.2",
]
huggingface = [
    "huggingface-hub==1.14.0",
]
auth = [
    "pyjwt[crypto]==2.12.1",
]
hdf5 = [
    "h5py==3.16.0",
]
export = [
    "h5py==3.16.0",
]
yolo = [
    "ultralytics==8.4.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint]
ignore = [
    "B008",   # Depends() in function defaults is a FastAPI pattern
    "B905",   # zip() without strict= is acceptable
    "B904",   # Exception cause via constructor, not raise-from
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.uv]
constraint-dependencies = ["pygments==2.20.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/**/conftest.py", "src/**/__init__.py"]

[tool.coverage.report]
show_missing = true
precision = 2
