[project]
name = "osmo-proxy"
version = "0.1.0"
description = "AML→OSMO proxy runtime dependencies"
requires-python = "==3.12.*"
# Versions are pinned exactly; the conda overlay in osmo-proxy-job.yaml mirrors
# these top-level constraints. Regenerate after any change:
#   cd training/utils/osmo-proxy && uv lock
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "mlflow>=2.10",
    "azureml-mlflow>=1.0",
    "azure-ai-ml>=1.13",
    "azure-identity>=1.15",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
# Pin cryptography >= 48.0.1 (GHSA-537c-gmf6-5ccf): azureml-mlflow caps < 47.0.0;
# force the patched release.
override-dependencies = [
    "cryptography==48.0.1",
]
